# HW_DS_01

./: Hw1.ipynb.ipynb  README.md  pyproject.toml
