[tool.poetry]
name = "test"
version = "0.1.0"
description = ""
authors = ["VladyslavBon <vladislav.bondarenko96@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
notebook = "^7.0.6"
numpy = "^1.26.2"
pandas = "^2.1.3"
matplotlib = "^3.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
